# serializer version: 1
# name: TestClassificationOutputs.test_rf_classifier_empirical_basic
  dict({
    'shapley_values_est': dict({
      'explain_id': dict({
        '1': 1,
        '2': 2,
        '3': 3,
        '4': 4,
        '5': 5,
      }),
      'none': dict({
        '1': 0.49473699044116304,
        '2': 0.49473694764391857,
        '3': 0.49473693984596995,
        '4': 0.49473674278591273,
        '5': 0.4947367070788505,
      }),
      'petal length (cm)': dict({
        '1': 0.12801916139806277,
        '2': 0.17902369680302938,
        '3': 0.19011412136229303,
        '4': -0.1802820689598093,
        '5': -0.13693856255353012,
      }),
      'petal width (cm)': dict({
        '1': 0.12431722355542674,
        '2': 0.17891725212540488,
        '3': 0.18946313930135267,
        '4': -0.17976783823623882,
        '5': -0.13656561082009305,
      }),
      'sepal length (cm)': dict({
        '1': 0.12490756609194711,
        '2': 0.060093118590336614,
        '3': 0.1500116669833939,
        '4': -0.16426825146578344,
        '5': -0.0839258145346004,
      }),
      'sepal width (cm)': dict({
        '1': 0.12801916139806285,
        '2': 0.08722907324120846,
        '3': -0.05432578075332731,
        '4': 0.029581330403250325,
        '5': -0.13730681665148384,
      }),
    }),
    'shapley_values_sd': dict({
      'explain_id': dict({
        '1': 1,
        '2': 2,
        '3': 3,
        '4': 4,
        '5': 5,
      }),
      'none': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': 0.0,
        '5': 0.0,
      }),
      'petal length (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'petal width (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'sepal length (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'sepal width (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': -0.0,
        '4': 0.0,
        '5': -0.0,
      }),
    }),
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_independence_basic
  dict({
    'shapley_values_est': dict({
      'explain_id': dict({
        '1': 1,
        '2': 2,
        '3': 3,
        '4': 4,
        '5': 5,
      }),
      'none': dict({
        '1': 0.49473684297129145,
        '2': 0.4947368411435411,
        '3': 0.494736842550239,
        '4': 0.49473684397607554,
        '5': 0.4947368400861254,
      }),
      'petal length (cm)': dict({
        '1': 0.24533333329051488,
        '2': 0.24363157896075183,
        '3': 0.24449122808400608,
        '4': -0.24321052630640155,
        '5': -0.2406315789378867,
      }),
      'petal width (cm)': dict({
        '1': 0.23463157890371944,
        '2': 0.23715789474972304,
        '3': 0.2292982456266866,
        '4': -0.23298245613016907,
        '5': -0.22756140349827572,
      }),
      'sepal length (cm)': dict({
        '1': 0.00817543853296232,
        '2': 0.0014736842023559682,
        '3': 0.010842105256901352,
        '4': -0.013298245584906273,
        '5': -0.00703508768936429,
      }),
      'sepal width (cm)': dict({
        '1': 0.017122806957014042,
        '2': 0.022999999996260206,
        '3': -0.009368421058502913,
        '4': -0.005245614007231211,
        '5': -0.019508771903181385,
      }),
    }),
    'shapley_values_sd': dict({
      'explain_id': dict({
        '1': 1,
        '2': 2,
        '3': 3,
        '4': 4,
        '5': 5,
      }),
      'none': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': 0.0,
        '5': 0.0,
      }),
      'petal length (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'petal width (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'sepal length (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': 0.0,
        '4': -0.0,
        '5': -0.0,
      }),
      'sepal width (cm)': dict({
        '1': 0.0,
        '2': 0.0,
        '3': -0.0,
        '4': -0.0,
        '5': -0.0,
      }),
    }),
  })
# ---
